Revert "Initial Commit"
This reverts commit e2ca654bdc1ba79d2f1984ce04f5df75ff38302f.

--- a/sample-config.json
+++ b/sample-config.json
@@ -1,12 +1,9 @@
 "accessories": [
     {
-        "accessory": "HomeMeteohub",            <-- Our Accessory name
-        "name": "Meteohub",                     <-- Easy to remember name
-        "ip_address":  "A.B.C.D",               <-- IP address of our meteohub  [pick IP OR server; leave the other empty --> ""]
-        "server_address: "your.domain.name",    <-- MeteoHub server FQ address  [pick server OR IP; leave the other empty --> ""]
-        "port": "1234",                         <-- Desired Port
-        "frequency": 5000,                      <-- Update frequency (5 second min)
-        "password": "<password>",               <-- Admin password for Meteohub <Currently NOT used>
-        "debug": "true"                         <-- Display temp/humidity readings in the console
+        "accessory": "HomeMeteobridge",
+        "name": "Meteobridge",
+        "ip_address":  "A.B.C.D",
+        "password": "<password>",
+        "frequency": 5000,
+        "debug": "true"
     }
-]
